# orgmode-google-fuse

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci-nix.yml  ci.yml
fixtures/dedent_first_child/: post.org
fixtures/dedent_last_child/: post.org
fixtures/dedent_middle_child/: post.org  pre.org
fixtures/dedent_reparent_middle_child/: post.org
fixtures/indent_reparent_first_child/: post.org  pre.org
fixtures/insert_first_child/: post.org  pre.org
fixtures/insert_last_child/: post.org  pre.org
fixtures/insert_middle_child/: post.org
fixtures/remove_first_child/: post.org
fixtures/remove_local_first_child/: post.org  pre.org
nix/modules/: devshell.nix  home.nix  overlay.nix  pre-commit.nix  rust.nix
src/: client.rs  fuse.rs  main.rs  oauth.rs  org.rs  streaming.rs  tasklist.rs  write.rs
src/org/: calendar.rs  conflict.rs  tasklist.rs  timestamp.rs
src/snapshots/: dedent_first_child@commands.snap  dedent_first_child@diff.snap  dedent_last_child@commands.snap  dedent_last_child@diff.snap  dedent_middle_child@commands.snap  dedent_middle_child@diff.snap  dedent_reparent_middle_child@commands.snap  dedent_reparent_middle_child@diff.snap  indent_reparent_first_child@commands.snap  indent_reparent_first_child@diff.snap  insert_first_child@commands.snap  insert_first_child@diff.snap  insert_last_child@commands.snap  insert_last_child@diff.snap  insert_middle_child@commands.snap  insert_middle_child@diff.snap  remove_first_child@commands.snap  remove_first_child@diff.snap  remove_local_first_child@commands.snap  remove_local_first_child@diff.snap
