[package]
authors = ["Nick Hu <me@nickhu.co.uk>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "orgmode-google-fuse"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.3.14", features = ["derive"] }
directories = "6.0.0"
evmap = "10.0.2"
fuser = "0.15.1"
futures = "0.3.31"
google-calendar3 = "6.0.0"
google-tasks1 = "6.0.0"
itertools = "0.14.0"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["user"] }
orgize = "0.9.0"
paste = "1.0.15"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
waitpid-any = "0.3.0"
