[package]
authors = ["Nick Hu <me@nickhu.co.uk>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "orgmode-google-fuse"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
chrono-tz = "0.10.4"
clap = { version = "4.5.56", features = ["derive"] }
directories = "6.0.0"
evmap = "10.0.2" # can't be updated
fuser = { version = "0.16.0", features = ["libfuse"] }
futures = "0.3.31"
google-calendar3 = "7.0.0"
google-tasks1 = "7.0.0"
yup-oauth2 = "12.1.2"
itertools = "0.14.0"
libc = "0.2.180"
nix = { version = "0.31.1", features = ["user"] }
orgize = { version = "0.10.0-alpha.10", features = ["chrono"] }
paste = "1.0.15"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
waitpid-any = "0.3.0"
iana-time-zone = "0.1.65"
atomic-time = "0.1.5"

[dev-dependencies]
proptest = "1.10.0"
